daemonset.yml
apiVersion: 
kind: DaemonSet
metadata: 
  name: sample-ds
spec:
  containers:
