deploy-sample.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deploy-sample
  namespace: custom-ns
spec: 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  revisionHistoryLimit: 4
  paused: false
  replicas: 4
  minReadySeconds: 20
  selector:
    matchLabels:
      role: webserver
    matchExpressions:
      - {key: version, operator: In, values: [v1, v2, v3]}
  template:
    metadata:
      name: app-container
      labels:
        app: my-app
        role: webserver
        version: v2
    spec:
      containers:
        - name: app
          image: ravikiran529/httpd:v2
          ports:
            - containerPort: 80
              protocol: TCP
