pod-sample.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    app: my-app
    role: webserver
    tier: frontend
spec:
  containers:
    - name: apache-server
      image: ravikiran529/httpd
      ports:
        - containerPort: 5432
      volumeMounts:
      - name: web-data
        mountPath: /var/lib/web/data
  volumes:
  - name: web-data
    hostPath:
      path: /var/lib/web-data
      type: DirectoryOrCreate
