service-sample.yml
apiVersion: v1
kind: Service
metadata:
  name: service-sample
  labels:
    role: service
spec:
  selector:
    role: webserver
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  type: NodePort
