ingress-sample.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-sample
  namespace: custom-ns
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: my-app.website.com
    http:
      paths:
      - backend:
          serviceName: MyService
          servicePort: 80
      - frontend:
          serviceName: sample-service
          servicePort: 80
